samples/_failures_safe/1761407302_e7dec6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a23ddab0.c: In function ‘main’:
./samples/SAFE/__tmp_a23ddab0.c:151:15: error: expected ‘;’ at end of input
  151 |         choice
      |               ^
      |               ;
./samples/SAFE/__tmp_a23ddab0.c:151:9: error: expected declaration or statement at end of input
  151 |         choice
      |         ^~~~~~
./samples/SAFE/__tmp_a23ddab0.c:151:9: error: expected declaration or statement at end of input
